--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -25,7 +25,6 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^1.0.1",
-    "superagent": "^1.1.0",
-    "ws": "^1.1.0"
+    "superagent": "^1.1.0"
   }
 }
